--- a/css/aqua.css
+++ b/css/aqua.css
@@ -35,6 +35,9 @@
     border: 1px solid #00BBED;
     color: #00BBED;
    }
+#OrgTitleName {
+color: rgba(0,0,0,0);
+}
    #settingToggle {
     width: 50px;
     position: relative; 
@@ -144,7 +147,7 @@ height: 20px;
   width: 100%;
   height: 100%;
   background-color: #000000;
-  background-image: url();
+  background-image: url("/img/aquabg.jpg");
   background-repeat: repeat;
   background-size: cover;
   background-position: 100% 100%;
