--- a/css/aqua.css
+++ b/css/aqua.css
@@ -114,14 +114,14 @@ canvas {
 .aqua {
   font-family: Poppins;
  color: rgba(0,0,0,0);
-  -webkit-text-stroke: 0.1px #00BBED;
+  -webkit-text-stroke: 0.1px #000000;
   font-size: 70px;
   text-align: center;
 }
 .aquasentence {
   color: rgba(0,0,0,0);
   font-family: Poppins;
-  -webkit-text-stroke: 0.01px #00BBED;
+  -webkit-text-stroke: 0.01px #000000;
   font-size: 20px;
   text-align: center
 }
