--- a/css/aqua.css
+++ b/css/aqua.css
@@ -15,16 +15,17 @@
 }
 #settings {
 	z-index: 10;
-    width: 683px; 
+    width: 700px; 
     height: 400px; 
     background-color: black; 
     position: fixed; 
-    left: 340px; 
+    left: 24vw; 
     border-radius: 20px; 
     border: 2px solid #00BBED;
-}.SettingsTitle {
+}
+
+.SettingsTitle {
  position: relative;
- left: 26px;
     font-family: Consolas; 
     text-align: center; 
     color: #00BBED;
@@ -40,8 +41,10 @@ color: rgba(0,0,0,0);
 }
    #settingToggle {
     width: 50px;
-    position: relative; 
-    top: -15px;
+    float: left;
+    position: absolute;
+    top: 33.5vw;
+    left: 0.7vw;
     border-radius: 50px;
    }
    #settingToggle:hover {
@@ -121,8 +124,8 @@ canvas {
 .aquasentence {
   color: rgba(0,0,0,0);
   font-family: Poppins;
-  -webkit-text-stroke: 0.01px #000000;
-  font-size: 20px;
+  -webkit-text-stroke: 0.4px #000000;
+  font-size: 26px;
   text-align: center
 }
 #srchbar {
@@ -175,40 +178,41 @@ height: 20px;
 }
 ul {
   z-index: 3;
-  background-color: rgba(0, 0, 0, 1);
+  background-color: rgba(0, 0, 0, 0);
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
   top: 0px;
- height: 50px;
+ height: 100px;
   width: 100%
 }
 
 li {
   z-index: 3;
-  float: left;
+  float: right;
 }
 
 li a {
+ position: relative;
+ top: 10px;
   z-index: 3;
- font-size: 16px;
+ font-size: 20x;
   font-family: Poppins;
   display: block;
-  color: #00BBED;
+  color: #000000;
   text-align: center;
-  padding: 14px 16px;
+  padding: 10px 20px;
   text-decoration: none;
 }
 
 li a:hover:not(.active) {
-  z-index: 3;
-    -webkit-animation: glowactive 5s linear infinite;
-  -moz-animation: glowactive 5s linear infinite;
-  animation: glowactive 5s linear infinite ;
-  -webkit-text-stroke: 0.8px #00BBED;
 
-  \
+  z-index: 3;
+ background-color: rgba(0, 187, 237, 0.5);
+color: #000000;
+  border-radius: 10px;
+ transition: .5s;
 }
 
 ::-webkit-scrollbar {
@@ -250,12 +254,11 @@ li a:hover:not(.active) {
 }
 
 .active {
-    -webkit-animation: glowactive 5s linear infinite;
-  -moz-animation: glowactive 5s linear infinite;
-  animation: glowactive 5s linear infinite;
-color: #ffffff;
-  border-radius: 100px;
-  height: 75%;
+ border: 2px #000000 solid;
+ background-color: rgba(0, 187, 237, 0.5);
+color: #000000;
+  border-radius: 10px;
+  height: 20%;
   text-shadow: 0 0 10px #00BBED;
 }
 @keyframes glowactive {
@@ -271,11 +274,11 @@ color: #ffffff;
 
 @keyframes glow {
   from {
-    box-shadow: 0 0 10px #0062ff, 0 0 20px #0062ff, 0 0 30px #000000, 0 0 40px #000000, 
-                 0 0 50px #000000, 0 0 40px #1ba82b, 0 0 30px #1ba82b, 0 0 20px #0062ff, 0 0 10px #0062ff;
+    box-shadow: 0 0 5px #0062ff, 0 0 10px #0062ff, 0 0 15px #000000, 0 0 20px #000000, 
+                 0 0 15px #000000, 0 0 10px #0062ff, 0 0 5px #0062ff;
   }
   to {
-    box-shadow: 0 0 50px #1ba82b, 0 0 40px #1ba82b, 0 0 30px #000000, 0 0 20px #ff4da6, 
-                 0 0 10px #000000, 0 0 20px #0062ff, 0 0 30px #0062ff, 0 0 40px #0062ff, 0 0 50px #0062ff;
+    box-shadow:0 0 20px #0062ff, 0 0 15px #0062ff, 0 0 10px #000000, 0 0 5px #000000, 
+                 0 0 10px #000000, 0 0 15px #0062ff, 0 0 20px #0062ff;
   }
 }
